[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scn/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Gfx/Font/Typori-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Gfx/2D/Menu04.png" type="Texture" id=4]
[ext_resource path="res://Scn/UI/Spinner/Spinner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Gfx/Shader/BlurShader.tres" type="Material" id=6]
[ext_resource path="res://Gfx/Font/LTBulletin-Medium.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://addons/SinusoidalAnims.gd" type="Script" id=8]
[ext_resource path="res://Gfx/2D/yeet.png" type="Texture" id=9]
[ext_resource path="res://Scn/UI/Cam/ShakyCam2D.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform sampler2D flowMap; //Displacement map
uniform float strength;    //Force of the effect
uniform float speed;       //Speed of the effect
uniform int frames : hint_range(1, 10); //Frames of the effect

//Returns a value between 0 and 1 depending of the frames -> exemple: frames = 4, frame 1 = 0.25
float clock(float time){
	float fframes = float(frames);
	return floor(mod(time * speed, fframes)) / fframes;
}

void fragment(){
	float c = clock(TIME); //Get clock frame
	vec4 offset = texture(flowMap, vec2(UV.x + c, UV.y + c)) * strength; //Get offset 
	//COLOR = texture(TEXTURE, vec2(UV.x,UV.y) + normal.xy); //Apply offset
	COLOR = texture(TEXTURE, vec2(UV.x,UV.y) + offset.xy - vec2(0.5,0.5)*strength); //We need to remove the displacement 
}
//void vertex() {
//	VERTEX
//}"

[sub_resource type="OpenSimplexNoise" id=9]
octaves = 1
period = 256.0

[sub_resource type="NoiseTexture" id=10]
seamless = true
noise = SubResource( 9 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/strength = 0.01
shader_param/speed = 24.0
shader_param/frames = 10
shader_param/flowMap = SubResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
resource_name = "Msg"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "ChooseGfx"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("All/Margin/Menu:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.05, 0, 1, -0.05, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("All/Margin/Menu:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.05, 0, 1, -0.05, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("All/Margin/Menu:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.05, 0, 1, -0.05, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("All/Margin/Menu:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.05, 0, 0, -0.05, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}

[sub_resource type="Animation" id=4]
resource_name = "Click"
length = 0.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("BG/Blur:material:shader_param/blur_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.125, 0, 0, -0.125, 0, 0.125, 0, 0.8, -0.125, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5 )
}

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Img" type="TextureRect" parent="BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1391.0
margin_top = -781.5
margin_right = 1391.0
margin_bottom = 781.5
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="ColorRect" parent="BG"]
material = ExtResource( 6 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1442.0
margin_top = -843.0
margin_right = 1442.0
margin_bottom = 843.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="CanvasLayer" parent="."]
layer = 2

[node name="Margin" type="MarginContainer" parent="All"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -559.0
margin_top = -316.0
margin_right = 559.0
margin_bottom = 316.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="All/Margin"]
margin_right = 1118.0
margin_bottom = 632.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="All/Margin/Menu"]
margin_right = 1118.0
margin_bottom = 223.0
hint_tooltip = "So, you decided to hover over me? I wonder what else you can hover over ;P"
mouse_default_cursor_shape = 16
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="All/Margin/Menu/Title"]
margin_left = 396.0
margin_top = 57.0
margin_right = 722.0
margin_bottom = 166.0

[node name="Txt" type="Label" parent="All/Margin/Menu/Title/VBox"]
margin_right = 326.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Deviant 3D"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Txt2" type="Label" parent="All/Margin/Menu/Title/VBox"]
margin_top = 81.0
margin_right = 326.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
text = "Â© 2021 Calvin Wong "
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayMargin" type="MarginContainer" parent="All/Margin/Menu"]
margin_top = 227.0
margin_right = 1118.0
margin_bottom = 406.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="Play" type="HBoxContainer" parent="All/Margin/Menu/PlayMargin"]
modulate = Color( 0.709804, 0.827451, 1, 1 )
margin_top = 45.0
margin_right = 1118.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 88 )
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="All/Margin/Menu/PlayMargin/Play"]
modulate = Color( 0.968627, 0.905882, 1, 1 )
margin_right = 360.0
margin_bottom = 88.0
hint_tooltip = "Press then look for the invite link to send to friends!"
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinCenter" type="CenterContainer" parent="All/Margin/Menu/PlayMargin/Play"]
margin_left = 364.0
margin_right = 753.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.08

[node name="Spinner" parent="All/Margin/Menu/PlayMargin/Play/SpinCenter" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_top = 6.0
margin_right = 232.0
margin_bottom = 82.0
rect_min_size = Vector2( 76, 76 )
rect_scale = Vector2( 1, 1 )
rect_pivot_offset = Vector2( 38, 38 )
expand = true
stretch_mode = 6

[node name="Join" type="Button" parent="All/Margin/Menu/PlayMargin/Play"]
modulate = Color( 0.901961, 1, 0.941176, 1 )
margin_left = 757.0
margin_right = 1118.0
margin_bottom = 88.0
hint_tooltip = "Press this if you've joined using the link from the host"
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="All/Margin/Menu"]
margin_top = 410.0
margin_right = 1118.0
margin_bottom = 589.0
rect_min_size = Vector2( 0, 88 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="Graphics" type="Button" parent="All/Margin/Menu/Center"]
modulate = Color( 0.709804, 0.827451, 1, 1 )
margin_left = 431.0
margin_top = 45.0
margin_right = 687.0
margin_bottom = 133.0
rect_min_size = Vector2( 256, 88 )
hint_tooltip = "Choose how to set your eyeballs on fire"
mouse_default_cursor_shape = 2
text = "Graphics"

[node name="Status" type="Label" parent="All/Margin/Menu"]
margin_top = 593.0
margin_right = 1118.0
margin_bottom = 632.0
align = 1

[node name="yeet" type="TextureRect" parent="All"]
material = SubResource( 8 )
margin_left = 1025.65
margin_top = 24.2725
margin_right = 1252.65
margin_bottom = 104.272
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="All"]
margin_left = 215.414
margin_top = 138.542
margin_right = 431.414
margin_bottom = 189.542
rect_rotation = -25.4588
rect_scale = Vector2( 1.07308, 1.07308 )
rect_pivot_offset = Vector2( 108, 25 )
custom_fonts/font = SubResource( 5 )
text = "This text totally ain't 
ripping off Minecraft"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Txt" type="AnimationPlayer" parent="All/Label"]
autoplay = "Msg"
anims/Msg = SubResource( 6 )
script = ExtResource( 8 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/ChooseGfx = SubResource( 3 )

[node name="ClickAnim" type="AnimationPlayer" parent="."]
anims/Click = SubResource( 4 )

[node name="shaky_cam" parent="." instance=ExtResource( 10 )]

[connection signal="pressed" from="All/Margin/Menu/PlayMargin/Play/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="All/Margin/Menu/PlayMargin/Play/Join" to="." method="_on_Join_pressed"]
[connection signal="button_up" from="All/Margin/Menu/Center/Graphics" to="." method="_on_Graphics_button_up"]
